<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.QuizDashboardActivity">

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_banner"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:id="@+id/tv_question_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_textview"
                    android:gravity="center"
                    android:text="1"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/question_no"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_appname" />

                <TextView
                    android:id="@+id/tv_appname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/sansita_one"
                    android:gravity="center"
                    android:text="@string/tit"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/q1"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/question"
                    tools:ignore="RtlCompat" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/button_margin"
                    android:layout_marginBottom="@dimen/button_margin">

                    <Button
                        android:id="@+id/a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/custom_button"
                        android:onClick="optionAClicked"
                        android:text="@string/q1_a"
                        android:textColor="@android:color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:elevation="100dp"
                        android:padding="5dp"
                        android:textColor="@android:color/black"
                        android:textSize="22sp"
                        app:layout_constraintBottom_toTopOf="@+id/a"
                        app:layout_constraintStart_toStartOf="@+id/a"
                        app:layout_constraintTop_toBottomOf="@+id/a"
                        tools:ignore="RtlCompat" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/button_margin">

                    <Button
                        android:id="@+id/b"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/custom_button"
                        android:onClick="optionBClicked"
                        android:text="@string/q1_b"
                        android:textColor="@android:color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:elevation="100dp"
                        android:padding="5dp"
                        android:textColor="@android:color/black"
                        android:textSize="22sp"
                        app:layout_constraintBottom_toTopOf="@+id/b"
                        app:layout_constraintStart_toStartOf="@+id/b"
                        app:layout_constraintTop_toBottomOf="@+id/b"
                        tools:ignore="RtlCompat" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/button_margin">

                    <Button
                        android:id="@+id/c"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/custom_button"
                        android:onClick="optionCClicked"
                        android:text="@string/q1_c"
                        android:textColor="@android:color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:elevation="100dp"
                        android:padding="5dp"
                        android:textColor="@android:color/black"
                        android:textSize="22sp"
                        app:layout_constraintBottom_toTopOf="@+id/c"
                        app:layout_constraintStart_toStartOf="@+id/c"
                        app:layout_constraintTop_toBottomOf="@+id/c"
                        tools:ignore="RtlCompat" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/button_margin">

                    <Button
                        android:id="@+id/d"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/custom_button"
                        android:onClick="optionDClicked"
                        android:text="@string/q1_d"
                        android:textColor="@android:color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:elevation="100dp"
                        android:padding="5dp"
                        android:textColor="@android:color/black"
                        android:textSize="22sp"
                        app:layout_constraintBottom_toTopOf="@+id/d"
                        app:layout_constraintStart_toStartOf="@+id/d"
                        app:layout_constraintTop_toBottomOf="@+id/d"
                        tools:ignore="RtlCompat" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ce"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/button_margin">

                    <Button
                        android:id="@+id/e"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/custom_button"
                        android:onClick="optionEClicked"
                        android:text="@string/q1_e"
                        android:textColor="@android:color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_e"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:elevation="100dp"
                        android:padding="5dp"
                        android:textColor="@android:color/black"
                        android:textSize="22sp"
                        app:layout_constraintBottom_toTopOf="@+id/e"
                        app:layout_constraintStart_toStartOf="@+id/e"
                        app:layout_constraintTop_toBottomOf="@+id/e"
                        tools:ignore="RtlCompat" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/button_margin">

                    <Button
                        android:id="@+id/f"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/custom_button"
                        android:onClick="optionFClicked"
                        android:text="@string/q1_f"
                        android:textColor="@android:color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_f"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:elevation="100dp"
                        android:padding="5dp"
                        android:textColor="@android:color/black"
                        android:textSize="22sp"
                        app:layout_constraintBottom_toTopOf="@+id/f"
                        app:layout_constraintStart_toStartOf="@+id/f"
                        app:layout_constraintTop_toBottomOf="@+id/f"
                        tools:ignore="RtlCompat" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/button"
                    android:layout_width="@android:dimen/thumbnail_height"
                    android:layout_height="@dimen/edez"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/btn_back"
                    android:text="التالي"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>